; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_mpsc.c_mpsc_init_hw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_mpsc.c_mpsc_init_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpsc_port_info = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [32 x i8] c"mpsc_init_hw[%d]: Initializing\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mpsc_port_info*)* @mpsc_init_hw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mpsc_init_hw(%struct.mpsc_port_info* %0) #0 {
  %2 = alloca %struct.mpsc_port_info*, align 8
  store %struct.mpsc_port_info* %0, %struct.mpsc_port_info** %2, align 8
  %3 = load %struct.mpsc_port_info*, %struct.mpsc_port_info** %2, align 8
  %4 = getelementptr inbounds %struct.mpsc_port_info, %struct.mpsc_port_info* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @pr_debug(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = load %struct.mpsc_port_info*, %struct.mpsc_port_info** %2, align 8
  %9 = load %struct.mpsc_port_info*, %struct.mpsc_port_info** %2, align 8
  %10 = getelementptr inbounds %struct.mpsc_port_info, %struct.mpsc_port_info* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @mpsc_brg_init(%struct.mpsc_port_info* %8, i32 %11)
  %13 = load %struct.mpsc_port_info*, %struct.mpsc_port_info** %2, align 8
  %14 = call i32 @mpsc_brg_enable(%struct.mpsc_port_info* %13)
  %15 = load %struct.mpsc_port_info*, %struct.mpsc_port_info** %2, align 8
  %16 = call i32 (...) @dma_get_cache_alignment()
  %17 = call i32 @mpsc_sdma_init(%struct.mpsc_port_info* %15, i32 %16)
  %18 = load %struct.mpsc_port_info*, %struct.mpsc_port_info** %2, align 8
  %19 = call i32 @mpsc_sdma_stop(%struct.mpsc_port_info* %18)
  %20 = load %struct.mpsc_port_info*, %struct.mpsc_port_info** %2, align 8
  %21 = call i32 @mpsc_hw_init(%struct.mpsc_port_info* %20)
  ret void
}

declare dso_local i32 @pr_debug(i8*, i32) #1

declare dso_local i32 @mpsc_brg_init(%struct.mpsc_port_info*, i32) #1

declare dso_local i32 @mpsc_brg_enable(%struct.mpsc_port_info*) #1

declare dso_local i32 @mpsc_sdma_init(%struct.mpsc_port_info*, i32) #1

declare dso_local i32 @dma_get_cache_alignment(...) #1

declare dso_local i32 @mpsc_sdma_stop(%struct.mpsc_port_info*) #1

declare dso_local i32 @mpsc_hw_init(%struct.mpsc_port_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
